--- a/src/pages/care-plan/su-goals/su-goals.html
+++ b/src/pages/care-plan/su-goals/su-goals.html
@@ -114,6 +114,9 @@
             <su-goals-edit-view
               name="edit-view"
               goal-data="{{goalData}}"
+              goal-id="[[goalId]]"
+              home="[[home]]"
+              patient="[[patient]]"
               user-list="[[userList]]"
               step-id="{{stepId}}"
               step-modal-open="{{stepModalOpen}}"
